--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+  <title>iCloudify</title>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+  <h1>Welcome to iCloudify by Mumtaz</h1>
+  <p>This Website Is Under Maintenance</p>
 </body>
-
 </html>
